--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
        name: dashboard-deploy
        labels:
          app: dashboard
-         version: 1.0.0
+         version: "1.0.0"
    spec:
      containers:
       - name: dashboard
