--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -10,7 +10,7 @@ spec:
      matchLabels:
        app: dashboard
    strategy:
-     type: rollingUpdate
+     type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1   
